Enhance mod metadata handling: add support for additional fields in ModDescriptor, improve NowsContext functionality, and update KDL integration for better mod management.